@@ -1,37 +1,12 @@
 #!perl
 #
-# extract O_FILES from global Makefile
+# get runtime info about paths
 #
 use 5.005_03;
 use Cwd 'abs_path';
-use Parrot::Config;
 
-my $MF = $ARGV[0] || '../../Makefile';
 my $pconfig = $ARGV[1] || 'perl6-config';
 
-open IN, $MF or die("Can't read '$MF': $?");
-my (%o, @o_files);
-$o{O} = $PConfig{o};
-while (<IN>) {
-	chomp;
-	while (s/\\$//) {
-		chomp($_ .= <IN>);
-	}
-	if (/^\s*A\s*=\s*(.*)/) {
-		$a = $1;
-	}
-	elsif (/^\s*(\w+_O_FILES)\s*=\s*(.*)/) {
-		my ($k, $v) = ($1, $2);
-		$v =~ s/\s+/ /g;
-		$o{$k} = $v;
-	}
-	elsif (/^\s*O_FILES\s*=\s*(.*)/) {
-		my @list = split(' ',$1);
-		@o_files = map {s/\$\((\w+)\)/$o{$1}/eg; $_} @list;
-		last;
-	}
-}
-close(IN);
 my ($pwd, $pr);
 $pwd = abs_path('.');
 $pr = abs_path('../../');
@@ -39,9 +14,7 @@ open(OUT, ">$pconfig");
 print OUT "# DO NOT CHANGE: this file is generated by '$0'\n";
 print OUT "# run 'make' to make perl6-config\n\n";
 print OUT qq{\$HERE = '$pwd';\n};
-print OUT qq{\$LIB = '$a';\n};
 print OUT qq{\$PARROT_ROOT = '$pr';\n};
-print OUT qq{\$O_FILES = '@o_files';\n};
 close OUT;
 
 
