@@ -247,3 +247,12 @@
 	* Fixes:
 	    - driver tidying and doc-update (Leo).
 	    - regex fixes: advance, no-arg call
+
+2002-08-27
+
+	* Additions:
+	    - "perl6 --test" to run tests faster by about 2x (Leo)
+
+	* Fixes:
+	    - doc updates in perl6 (Leo)
+	    - remove Makefile parsing in pconfig.pl (Leo)
